Ultimo para presentar

--- a/blog.html
+++ b/blog.html
@@ -223,8 +223,8 @@
                             <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +591 78004706</a>
+                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +591 78004706</a>
                         </div>
                     </div>
                 </div>
