--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                         <!--datos-->
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-geo-alt text-dark fs-1"></i>
+                                <i class="bi bi-geo-alt contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Dirección</h5>
@@ -135,7 +135,7 @@
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-mailbox text-dark fs-1"></i>
+                                <i class="bi bi-mailbox contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Correo</h5>
@@ -145,17 +145,17 @@
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-phone text-dark fs-1"></i>
+                                <i class="bi bi-phone contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Teléfono:</h5>
-                                <span>3-3521311
+                                <span>+591 78004706
                             </div>
                         </div>
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-whatsapp text-dark fs-1"></i>
+                                <i class="bi bi-whatsapp contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>WhatsApp</h5>
@@ -196,9 +196,9 @@
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100066758516455"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.youtube.com/@LaboratorioBio-Cell"><i class="fab fa-youtube"></i></a>
+                                
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/laboratorios_biocell"><i class="fab fa-instagram"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.tiktok.com/@laboratoriobiocell?_t=8o2qZoabZG1&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+                                
                             </div>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                             <h4 class="mb-4 text-white">Contact Info</h4>
                             <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +591 78004706 </a>
                             <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
