--- a/contactold.html
+++ b/contactold.html
@@ -153,7 +153,7 @@
                             </div>
                             <div class="ms-3">
                                 <h5>Teléfono:</h5>
-                                <span>3-3521311
+                                <span>+591 78004706
                             </div>
                         </div>
                         <br>
