--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             </div>
                             <div class="ms-3">
                                 <h5>Teléfono:</h5>
-                                <span>3-3521311
+                                <span>+591 78004706
                             </div>
                         </div>
                         <br>
@@ -848,9 +848,7 @@
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100066758516455"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.youtube.com/@LaboratorioBio-Cell"><i class="fab fa-youtube"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/laboratorios_biocell"><i class="fab fa-instagram"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.tiktok.com/@laboratoriobiocell?_t=8o2qZoabZG1&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/laboratorios_biocell"><i class="fab fa-instagram"></i></a>  
                             </div>
                         </div>
                     </div>
@@ -875,10 +873,10 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
+                            <h4 class="mb-4 text-white">Contáctenos</h4>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
                             <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +591 78004706 </a>
                             <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
