--- a/service.html
+++ b/service.html
@@ -433,9 +433,9 @@
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100066758516455"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.youtube.com/@LaboratorioBio-Cell"><i class="fab fa-youtube"></i></a>
+                                
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/laboratorios_biocell"><i class="fab fa-instagram"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.tiktok.com/@laboratoriobiocell?_t=8o2qZoabZG1&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+                                
                             </div>
                         </div>
                     </div>
@@ -463,7 +463,7 @@
                             <h4 class="mb-4 text-white">Contact Info</h4>
                             <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +591 78004706 </a>
                             <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
