--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
                         <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto, Nro 700</a>
-                        <a href="#" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>78004706</a>
+                        <a href="#" class="text-light me-4"><i class="fas bi-whatsapp text-primary me-2"></i>78004706</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>smbiocell@cotas.com.bo</a>
                     </div>
                 </div>
@@ -361,7 +361,7 @@
                             <h4 class="mb-4 text-white">Contact Info</h4>
                             <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +591 78004706 </a>
+                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
                             <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
