--- a/contact.html
+++ b/contact.html
@@ -45,15 +45,15 @@
             <div class="row gx-0 align-items-center Topbar-height">
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto, Nro 700</a>
-                        <a href="#" class="text-light me-4"><i class="fas bi-whatsapp text-primary me-2"></i>78004706</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto esquina Mario Flores 700A 2do piso</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-phone text-primary me-2"></i>3-3521311</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>smbiocell@cotas.com.bo</a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
+                        <a href="https://api.whatsapp.com/send/?phone=78004706" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100066758516455" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-facebook-f"></i></a>
-                        
                         <a href="https://www.instagram.com/laboratorios_biocell" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-instagram"></i></a>
                         
                     </div>
@@ -224,10 +224,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
-                            <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
+                            <a href="https://maps.app.goo.gl/df8goTWRMmpb67wk8"><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
+                            <a href="mailto:smbiocell@cotas.com.bo"><i class="fas fa-envelope me-2"></i>smbiocell@cotas.com.bo</a>
+                            <a href="tel:33521311"><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href="https://api.whatsapp.com/send/?phone=78004706" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
                 </div>
