--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
             <div class="row gx-0 align-items-center Topbar-height">
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto, Nro 700</a>
-                        <a href="#" class="text-light me-4"><i class="fas bi-whatsapp text-primary me-2"></i>78004706</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto esquina Mario Flores 700A 2do piso</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-phone text-primary me-2"></i>3-3521311</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>smbiocell@cotas.com.bo</a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
+                        <a href="https://api.whatsapp.com/send/?phone=78004706" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100066758516455" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-facebook-f"></i></a>
-                        
                         <a href="https://www.instagram.com/laboratorios_biocell" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-instagram"></i></a>
                         
                     </div>
@@ -151,23 +151,25 @@
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Exámenes Médicos Ocupacionales</h5>
-                                    <p class="mb-4">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus, dolor qui ullam</p>
-                                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>
+                                    <p class="mb-4">Acto mediante el cual se interroga y examina a un trabajador, con el fin de monitorear la exposición a factores de riesgo y determinar la existenia de consecuencias en la persona por dicha exposición.</p>
+                                   <!--  <a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a> -->
                                 </div>
+                                <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded h-100 d-flex flex-column">
                            <div class="service-img rounded-top">
-                                <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <img src="img/ex. complementarios.jpg" class="img-fluid rounded-top w-100" alt="">
                            </div>
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Exámenes Complementarios</h5>
-                                    <p class="mb-4">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus, dolor qui ullam</p>
-                                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>
+                                    <p class="mb-4">Los exámenes médicos ocupacionales se realizan según el riesgo de exposición de cada trabajador a agentes nocivos en su trabajo. Ayudan a diagnosticar enfermedades profesionales y a controlar la exposición a riesgos laborales.</p>
+                                    <!-- <a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>-->
                                 </div>
+                                <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
                             </div>
                         </div>
                     </div>
@@ -179,23 +181,25 @@
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Valoraciones por Especialidad</h5>
-                                    <p class="mb-4">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus, dolor qui ullam</p>
-                                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>
+                                    <p class="mb-4">Son evaluaciones médicas realizadas por especialistas en áreas específicas como cardiología, neurología, Neumología, entre otras.</p>
+                                    <!-- <a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>-->
                                 </div>
+                                <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="service-item rounded h-100 d-flex flex-column">
                            <div class="service-img rounded-top">
-                                <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <img src="img/otros.jpg" class="img-fluid rounded-top w-100" alt="">
                            </div>
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Otras pruebas</h5>
-                                    <p class="mb-4">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus, dolor qui ullam</p>
-                                    <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>
+                                    <p class="mb-4">1.- HOLTER 24 HRS<br>2.- TEST DE ERGOMETRÍA<br>3.-M.A.P.A.(MONITOREO DE PRESION ARTERIAL)<br>4.-ECOGRAFÍA DOPLER CARDIACA<br>5.-ECOGRAFÍA ABDOMINAL Y OTROS</p>
+                                    <!--<a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a> --> 
                                 </div>
+                                <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
                             </div>
                         </div>
                     </div>
@@ -258,7 +262,7 @@
                     </div>
                     -->
                     <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
-                        <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="service.html">Más información</a>
+                       <!-- <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="service.html">Más información</a> -->
                     </div>
                 </div>
             </div>
@@ -874,10 +878,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Contáctenos</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
-                            <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
+                            <a href="https://maps.app.goo.gl/df8goTWRMmpb67wk8"><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
+                            <a href="mailto:smbiocell@cotas.com.bo"><i class="fas fa-envelope me-2"></i>smbiocell@cotas.com.bo</a>
+                            <a href="tel:33521311"><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href="https://api.whatsapp.com/send/?phone=78004706" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
                 </div>
