--- a/service.html
+++ b/service.html
@@ -45,15 +45,15 @@
             <div class="row gx-0 align-items-center Topbar-height">
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto, Nro 700</a>
-                        <a href="#" class="text-light me-4"><i class="fas bi-whatsapp text-primary me-2"></i>78004706</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto esquina Mario Flores 700A 2do piso</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-phone text-primary me-2"></i>3-3521311</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>smbiocell@cotas.com.bo</a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
+                        <a href="https://api.whatsapp.com/send/?phone=78004706" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100066758516455" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-facebook-f"></i></a>
-                        
                         <a href="https://www.instagram.com/laboratorios_biocell" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-instagram"></i></a>
                         
                     </div>
@@ -113,8 +113,8 @@
                         <div class="sub-style">
                             <h4 class="sub-title px-3 mb-0">SERVICIOS DE </h4>
                         </div>
-                        <h1 class="display-3 mb-4">SALUD OCUPACIONAL</h1>
-                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+                        <h1 id="saludOcupacional" class="display-3 mb-4">SALUD OCUPACIONAL</h1>
+                        <p class="mb-0">Actividad multidisciplinaria, enfocada en promover y proteger el estado del bienestar físico, mental y social de los trabajadores en su desempeño laboral.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center py-lg-3 wow fadeInUp" data-wow-delay="0.2s">
@@ -403,6 +403,60 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="OtherTests-headingFour">
+                                            <button aria-controls="OtherTests-collapseFour" aria-expanded="false" class="accordion-button collapsed" data-bs-target="#OtherTests-collapseFour" data-bs-toggle="collapse" type="button">
+                                                <div class="text-muted me-3">
+                                                    <svg class="bi bi-question-circle-fill" fill="currentColor" height="24" viewbox="0 0 16 16" width="24" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"></path>
+                                                    </svg>
+                                                </div>
+                                                TEST DE ERGOMETRÍA
+                                            </button>
+                                        </h2>
+                                        <div aria-labelledby="OtherTests-headingFour" class="accordion-collapse collapse" data-bs-parent="#OtherTests-accordion" id="OtherTests-collapseFour">
+                                            <div class="accordion-body">
+                                                La prueba de esfuerzo o ergometría es un procedimiento diagnóstico que evalúa la respuesta del corazón a un ejercicio físico progresivo. Esta prueba es una de las exploraciones cardíacas más utilizadas y proporciona importantes datos diagnósticos y pronósticos en una amplia variedad de pacientes.
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="OtherTests-headingFive">
+                                            <button aria-controls="OtherTests-collapseFive" aria-expanded="false" class="accordion-button collapsed" data-bs-target="#OtherTests-collapseFive" data-bs-toggle="collapse" type="button">
+                                                <div class="text-muted me-3">
+                                                    <svg class="bi bi-question-circle-fill" fill="currentColor" height="24" viewbox="0 0 16 16" width="24" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"></path>
+                                                    </svg>
+                                                </div>
+                                                ECOGRAFÍAS
+                                            </button>
+                                        </h2>
+                                        <div aria-labelledby="OtherTests-headingFive" class="accordion-collapse collapse" data-bs-parent="#OtherTests-accordion" id="OtherTests-collapseFive">
+                                            <div class="accordion-body">
+                                                <p>Una ecografía es una prueba de diagnóstico por imagen que utiliza ondas sonoras para crear imágenes de órganos, tejidos y estructuras del interior del cuerpo.
+                                                    <br>Hay diferentes tipos de ecografías:
+                                                    <ul>
+                                                        <li>ECOGRAFÍA ABDOMINAL</li>
+                                                        <li>ECOGRAFÍA GINECOLÓGICA</li>
+                                                        <li>ECOGRAFÍA TRANSVAGINAL</li>
+                                                        <li>ECOGRAFÍA OBSTÉTRICA</li>
+                                                        <li>ECOGRAFÍA MAMARIA</li>
+                                                        <li>ECOGRAFÍA RENO VESICAL</li>
+                                                        <li>ECOGRAFÍA PROSTÁTICA</li>
+                                                        <li>ECOGRAFÍA TESTICULAR</li>
+                                                        <li>ECOGRAFÍA DE TIROIDES</li>
+                                                        <li>ECOGRAFÍA DE PARTES BLANDAS</li>
+                                                        <li>ECOGRAFÍA RENO VESICOPROSTÁTICA</li>
+                                                        <li>ECOGRAFÍA MORFOLÓGICA 1º TRIMESTRE</li>
+                                                        <li>ECOGRAFÍA MORFOLÓGICA 2º TRIMESTRE</li>
+                                                        <li>ECOGRAFÍA DOPPLER EN OBSTETRICIA</li>
+                                                        <li>ECOGRAFÍA 3D-4D</li>
+                                                    </ul>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -461,10 +515,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto # 700 esquina Mario Flores</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> smbiocell@cotas.com.bo</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> 3-3521311 </a>
-                            <a href="" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
+                            <a href="https://maps.app.goo.gl/df8goTWRMmpb67wk8"><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
+                            <a href="mailto:smbiocell@cotas.com.bo"><i class="fas fa-envelope me-2"></i>smbiocell@cotas.com.bo</a>
+                            <a href="tel:33521311"><i class="fas fa-phone me-2"></i> 3-3521311 </a>
+                            <a href="https://api.whatsapp.com/send/?phone=78004706" class="mb-3"><i class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                         </div>
                     </div>
                 </div>
