--- a/index copy.html
+++ b/index copy.html
@@ -45,7 +45,7 @@
             <div class="row gx-0 align-items-center Topbar-height">
                 <div class="col-lg-8 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto, Nro 700</a>
+                        <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Av. Cañoto esquina Mario Flores 700A 2do piso</a>
                         <a href="#" class="text-light me-4"><i class="fas fa-phone-alt text-primary me-2"></i>78004706</a>
                         <a href="#" class="text-light me-0"><i class="fas fa-envelope text-primary me-2"></i>smbiocell@cotas.com.bo</a>
                     </div>
