--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <p class="mb-5 fs-5">entendemos que la salud de tus empleados es clave para el éxito y
                                 productividad de tu organización 
                             </p>
-                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanost</a>
+                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanos</a>
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                                 ofrecerte servicios médicos de calidad, diseñados específicamente para
                                 proteger la salud de tu equipo y cumplir con las normativas laborales vigentes 
                             </p>
-                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanost</a>
+                            <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanos</a>
                         </div>
                     </div>
                 </div>
