--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Otras pruebas</h5>
-                                    <p class="mb-4">1.- HOLTER 24 HRS<br>2.- TEST DE ERGOMETRÍA<br>3.-M.A.P.A.(MONITOREO DE PRESION ARTERIAL)<br>4.-ECOGRAFÍA DOPLER CARDIACA<br>5.-ECOGRAFÍA ABDOMINAL Y OTROS</p>
+                                    <p class="mb-4">1.- Holter 24 Hrs<br>2.- Test de ergometría<br>3.-M.A.P.A.(Monitoreo de presión arterial)<br>4.-Ecografía doppler cardica<br>5.-Ecografía abdominal y otros</p>
                                     <!--<a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a> --> 
                                 </div>
                                 <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
@@ -276,9 +276,9 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="about-img pb-5 ps-5">
-                            <img src="img/about-1.jpg" class="img-fluid rounded w-100" style="object-fit: cover;" alt="Image">
+                            <img src="img/estamos listos para ayudar 01.jpg" class="img-fluid rounded w-100" style="object-fit: cover;" alt="Image">
                             <div class="about-img-inner">
-                                <img src="img/about-2.jpg" class="img-fluid rounded-circle w-100 h-100" alt="Image">
+                                <img src="img/estamos listos para ayudar 2.jpg" class="img-fluid rounded-circle w-100 h-100" alt="Image">
                             </div>
                             <div class="about-experience"></div>
                         </div>
