--- a/service.html
+++ b/service.html
@@ -457,7 +457,7 @@
                                             <div class="text-muted me-3">
                                                 <i class="fa-solid fa-stethoscope fa-lg"></i>
                                             </div>
-                                            ECOCARDIOGRAMA DOPPLER
+                                            Ecocardiograma Doppler
                                         </button>
                                     </h2>
                                     <div aria-labelledby="OtherTests-headingTwo" class="accordion-collapse collapse"
@@ -479,7 +479,7 @@
                                             <div class="text-muted me-3">
                                                 <i class="fa-solid fa-stethoscope fa-lg"></i>
                                             </div>
-                                            MAPA – Monitoreo de presión arterial
+                                            Mapa – Monitoreo de presión arterial
                                         </button>
                                     </h2>
                                     <div aria-labelledby="OtherTests-headingThree" class="accordion-collapse collapse"
@@ -500,7 +500,7 @@
                                             <div class="text-muted me-3">
                                                 <i class="fa-solid fa-stethoscope fa-lg"></i>
                                             </div>
-                                            TEST DE ERGOMETRÍA
+                                            Test de ergometría
                                         </button>
                                     </h2>
                                     <div aria-labelledby="OtherTests-headingFour" class="accordion-collapse collapse"
@@ -523,7 +523,7 @@
                                             <div class="text-muted me-3">
                                                 <i class="fa-solid fa-stethoscope fa-lg"></i>
                                             </div>
-                                            ECOGRAFÍAS
+                                            Ecografías
                                         </button>
                                     </h2>
                                     <div aria-labelledby="OtherTests-headingFive" class="accordion-collapse collapse"
@@ -534,21 +534,21 @@
                                                 interior del cuerpo.
                                                 <br>Hay diferentes tipos de ecografías:
                                             <ul>
-                                                <li>ECOGRAFÍA ABDOMINAL</li>
-                                                <li>ECOGRAFÍA GINECOLÓGICA</li>
-                                                <li>ECOGRAFÍA TRANSVAGINAL</li>
-                                                <li>ECOGRAFÍA OBSTÉTRICA</li>
-                                                <li>ECOGRAFÍA MAMARIA</li>
-                                                <li>ECOGRAFÍA RENO VESICAL</li>
-                                                <li>ECOGRAFÍA PROSTÁTICA</li>
-                                                <li>ECOGRAFÍA TESTICULAR</li>
-                                                <li>ECOGRAFÍA DE TIROIDES</li>
-                                                <li>ECOGRAFÍA DE PARTES BLANDAS</li>
-                                                <li>ECOGRAFÍA RENO VESICOPROSTÁTICA</li>
-                                                <li>ECOGRAFÍA MORFOLÓGICA 1º TRIMESTRE</li>
-                                                <li>ECOGRAFÍA MORFOLÓGICA 2º TRIMESTRE</li>
-                                                <li>ECOGRAFÍA DOPPLER EN OBSTETRICIA</li>
-                                                <li>ECOGRAFÍA 3D-4D</li>
+                                                <li>Ecografía abdominal</li>
+                                                <li>Ecografía ginecológica</li>
+                                                <li>Ecografía transvaginal</li>
+                                                <li>Ecografía obstétrica</li>
+                                                <li>Ecografía mamaria</li>
+                                                <li>Ecografía reno vesical</li>
+                                                <li>Ecografía prostática</li>
+                                                <li>Ecografía testicular</li>
+                                                <li>Ecografía de tiroides</li>
+                                                <li>Ecografía de partes blandas</li>
+                                                <li>Ecografía reno vesicoprostática</li>
+                                                <li>Ecografía morfológica 1º trimestre</li>
+                                                <li>Ecografía morfológica 2º trimestre</li>
+                                                <li>Ecografía doppler en obstetricia</li>
+                                                <li>Ecografía 3D-4D</li>
                                             </ul>
                                             </p>
                                         </div>
