--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Bio-Cell - Servicios Médicos Ocupacionales</title>
+        <title>Bio-Cell - Servicios Médicos Ocupacional</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="Servicios, Médicos, Ocupacionales">
         <meta content="" name="Servicios Médicos Ocupacionales">
@@ -119,8 +119,10 @@
                     </div>
                 </div>
 
-                <div class="row g-4 align-items-center">
+                <div class="row g-4 align-items-start">
                     <div class="col-lg-5 col-xl-5 contact-form wow fadeInLeft" data-wow-delay="0.1s">
+                        <h2 class="mb-4">Nuestros datos</h2>
+                        <p class="mb-4">Estamos atentos a cualquier consulta que necesite</p>
                         <!--datos-->
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
@@ -167,9 +169,9 @@
                     <div class="col-lg-1 col-xl-1 wow fadeInUp" data-wow-delay="0.5s">
                         <!--separa-->
                     </div>
-                    <div class="col-lg-5 col-xl-5 wow fadeInRight" data-wow-delay="0.3s">
-                        <!--MAPA-->
-                        
+                    <div class="col-lg-5 col-xl-5 contact-form  wow fadeInRight" data-wow-delay="0.3s">
+                        <h2 class="mb-4">Servicio médico ocupacional</h2>
+                        <!--MAPA-->                   
                         <iframe class="w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.082421667049!2d-63.19060208551618!3d-17.78782307986441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e811cb3ebad9%3A0x5e5d85e01dc53bb4!2sLaboratorio+Bio-Cell+Central!5e0!3m2!1ses!2sbo!4v1555533808299!5m2!1ses!2sbo"
                         frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
@@ -223,7 +225,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Contact Info</h4>
+                            <h4 class="mb-4 text-white">Contacto</h4>
                             <a href="https://maps.app.goo.gl/df8goTWRMmpb67wk8"><i class="fa fa-map-marker-alt me-2"></i> Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
                             <a href="mailto:smbiocell@cotas.com.bo"><i class="fas fa-envelope me-2"></i>smbiocell@cotas.com.bo</a>
                             <a href="tel:33521311"><i class="fas fa-phone me-2"></i> 3-3521311 </a>
